# Blog-v4

./: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
.GitHub/: create-component.md  readme.md
.GitHub/Prompts/: create-component.md
.GitHub/instructions/: react.md
app/backend/: main.py  pyproject.toml  requirements.txt
app/backend/api/v1/: router.py
app/backend/api/v1/endpoints/: auth.py  players.py  teams.py
app/backend/core/: config.py  logging.py  security.py
app/backend/db/: base.py  session.py
app/backend/graphql/: schema.py
app/backend/graphql/mutations/: __init__.py
app/backend/graphql/queries/: __init__.py
app/backend/graphql/resolvers/: __init__.py
app/backend/graphql/types/: __init__.py
app/backend/models/: __init__.py  player.py  team.py
app/backend/repositories/: __init__.py  player_repository.py  team_repository.py
app/backend/schemas/: __init__.py  player.py  team.py
app/backend/services/: __init__.py  player_service.py  team_service.py
app/backend/tests/: test_players.py
app/backend/workers/: __init__.py
app/backend/workers/jobs/: import_players.py  sync_stats.py
app/database/schema/: 001_initial.sql
app/database/seeds/: players.sql  teams.sql
app/docs/: api.md  architecture.md  database.md  frontend.md
app/frontend/: index.html  package.json  vite.config.ts
app/frontend/src/: main.tsx
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/archive/: page.tsx
src/components/: ApolloProvider.tsx
src/lib/: apollo-client.ts  mock-data.ts  utils.ts
(+40 files in other folders)
